<resources>
    <string name="app_name">MoviesBrowser</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="watchers">Watchers</string>
    <string name="error_occurred">Error occurred</string>
    <string name="movie">Movie</string>
    <string name="show">Show</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="genres">Genres</string>
    <string name="votes">Votes</string>
    <string name="country">Country</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>

    <string name="error_default">Something went wrong.</string>
</resources>
