<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/movieItemTitleHeader"
        style="@style/MovieHeaderStyle"
        android:text="@string/title" />

    <TextView
        android:id="@+id/movieItemTitle"
        style="@style/MovieContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Lion King" />

    <TextView
        android:id="@+id/movieItemYearHeader"
        style="@style/MovieHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/movieItemYear"
        style="@style/MovieContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1994" />

    <TextView
        android:id="@+id/movieItemWatchersHeader"
        style="@style/MovieHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchers" />

    <TextView
        android:id="@+id/movieItemWatchers"
        style="@style/MovieContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="15203" />
</LinearLayout>
