<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailsMainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/detailsFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_xxl"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Lion King" />

        <TextView
            android:id="@+id/detailsFragmentOverviewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Overview" />

        <TextView
            android:id="@+id/detailsFragmentOverview"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentOverviewHeader"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Film about lion who is a king" />

        <TextView
            android:id="@+id/detailsFragmentRatingBarHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentOverview"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/detailsFragmentRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="10"
            android:isIndicator="true"
            android:stepSize="0.1"
            android:progressTint="?colorPrimary"
            android:saveEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentRatingBarHeader"
            app:layout_constraintStart_toStartOf="parent"
            tools:rating="2.5" />

        <TextView
            android:id="@+id/detailsFragmentYearHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentRatingBar"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detailsFragmentYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1993"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentYearHeader"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/detailsFragmentGenresHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentYear"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detailsFragmentGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Horror"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentGenresHeader"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detailsFragmentCountryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentGenres"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detailsFragmentCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentCountryHeader"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="USA" />

        <TextView
            android:id="@+id/detailsFragmentVotesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votes"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentCountry"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detailsFragmentVotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detailsFragmentVotesHeader"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="11201" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/detailsFragmentSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </FrameLayout>
</FrameLayout>
